--- a/src/pug/partials/head.pug
+++ b/src/pug/partials/head.pug
@@ -3,7 +3,7 @@ meta(charset='UTF-8')
 meta(http-equiv="X-UA-Compatible" content="ie=edge")
 meta(name="viewport" content="width=device-width, initial-scale=1.0")
 meta(name="author" content="padel")
-title #{PageTitle}
+title #{pageTitle}
 link(rel='shortcut icon' href='img/favicon.png')
 link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css')
 link(rel='stylesheet' href='https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css')
