--- a/src/pug/login.pug
+++ b/src/pug/login.pug
@@ -105,7 +105,7 @@ html
                 panelTwo = $('.form-panel.two')[0].scrollHeight + 200;
 
                 $('.form-panel.two').not('.form-panel.two.active').on('click', function(e) {
-                    e.preventDefault();
+                    //- e.preventDefault();
 
                     $('.form-toggle').addClass('visible');
                     $('.form-panel.one').addClass('hidden');
