--- a/src/pug/partials/footerScripts.pug
+++ b/src/pug/partials/footerScripts.pug
@@ -8,4 +8,5 @@ script(src='https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js')
 script(src='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js')
 script(src='https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js')
 script(src='https://cdn.jsdelivr.net/npm/darkmode-js@1.5.3/lib/darkmode-js.min.js')
+script(src='https://cdnjs.cloudflare.com/ajax/libs/venobox/1.8.6/venobox.min.js')
 script(src='js/all.min.js')
