--- a/src/pug/partials/head.pug
+++ b/src/pug/partials/head.pug
@@ -12,4 +12,5 @@ link(rel='stylesheet' href="https://fonts.googleapis.com/css?family=Dosis:400,60
 link(rel='stylesheet' href="https://fonts.googleapis.com/css?family=Poppins:300,400,500&display=swap")
 link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css")
 link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css")
+link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/venobox/1.8.6/venobox.min.css")
 link(rel='stylesheet' href='css/style.min.css')
