--- a/src/sass/pages/_profile.scss
+++ b/src/sass/pages/_profile.scss
@@ -90,8 +90,8 @@ section.profile-page {
         a {
           position: relative;
           display: block;
-          width: 150px;
-          height: 150px;
+          width: 170px;
+          height: 170px;
           margin: auto;
           &:after {
             position: absolute;
@@ -127,8 +127,8 @@ section.profile-page {
           & > img {
             position: relative;
             display: block;
-            width: 150px;
-            height: 150px;
+            width: 100%;
+            height: 100%;
             object-fit: cover;
             border-radius: 50%;
             box-shadow: 0px 0px 0px 10px rgba(255, 255, 255, 1);
