--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -3,7 +3,7 @@ header.header
         .nav--bar.d-flex.align-items-center
             .logo
                 a(href='index.html')
-                    img(src='img/logo.svg' class='img-fluid' draggable='false')
+                    img(src='img/logo.svg' class='img-fluid' alt='image alt' draggable='false')
             nav.nav
                 ul.links.d-flex.align-items-center
                     li.item
