--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -19,15 +19,15 @@ html
                             .col-lg-7
                                 .image-slider.h-100
                                     .slider--item
-                                        img(src='img/homeSlider/slide01.jpg' class='img-fluid')
+                                        img(src='img/homeSlider/slide01.jpg' class='img-fluid' alt='image alt')
                                     .slider--item
-                                        img(src='img/homeSlider/slide02.jpg' class='img-fluid')
+                                        img(src='img/homeSlider/slide02.jpg' class='img-fluid' alt='image alt')
                                     .slider--item
-                                        img(src='img/homeSlider/slide03.jpg' class='img-fluid')
+                                        img(src='img/homeSlider/slide03.jpg' class='img-fluid' alt='image alt')
                                     .slider--item
-                                        img(src='img/homeSlider/slide04.jpeg' class='img-fluid')
+                                        img(src='img/homeSlider/slide04.jpeg' class='img-fluid' alt='image alt')
                                     .slider--item
-                                        img(src='img/homeSlider/slide05.jpg' class='img-fluid')
+                                        img(src='img/homeSlider/slide05.jpg' class='img-fluid' alt='image alt')
                             .col-lg-5
                                 .text-slider.h-100.mt-3.mt-lg-0
                                     .text--slide
