--- a/src/pug/leaderboard.pug
+++ b/src/pug/leaderboard.pug
@@ -21,7 +21,7 @@ html
                             td 1
                             td.player-info
                                 a(href='profile.html').avatar-prof.mr-2.rounded-circle
-                                    img(src='https://placehold.it/35x35' alt='').img-fluid.rounded-circle.d-inline-block
+                                    img(src='https://placehold.it/35x35' alt='image alt').img-fluid.rounded-circle.d-inline-block
                                 h6.name.m-0.d-inline-block.text-capitalize
                                     a(href='profile.html') player name
                             td 5
@@ -33,7 +33,7 @@ html
                             td 1
                             td.player-info
                                 a(href='profile.html').avatar-prof.mr-2.rounded-circle
-                                    img(src='https://placehold.it/35x35' alt='').img-fluid.rounded-circle.d-inline-block
+                                    img(src='https://placehold.it/35x35' alt='image alt').img-fluid.rounded-circle.d-inline-block
                                 h6.name.m-0.d-inline-block.text-capitalize
                                     a(href='profile.html') player name
                             td 5
@@ -45,7 +45,7 @@ html
                             td 1
                             td.player-info
                                 a(href='profile.html').avatar-prof.mr-2.rounded-circle
-                                    img(src='https://placehold.it/35x35' alt='').img-fluid.rounded-circle.d-inline-block
+                                    img(src='https://placehold.it/35x35' alt='image alt').img-fluid.rounded-circle.d-inline-block
                                 h6.name.m-0.d-inline-block.text-capitalize
                                     a(href='profile.html') player name
                             td 5
@@ -57,7 +57,7 @@ html
                             td 1
                             td.player-info
                                 a(href='profile.html').avatar-prof.mr-2.rounded-circle
-                                    img(src='https://placehold.it/35x35' alt='').img-fluid.rounded-circle.d-inline-block
+                                    img(src='https://placehold.it/35x35' alt='image alt').img-fluid.rounded-circle.d-inline-block
                                 h6.name.m-0.d-inline-block.text-capitalize
                                     a(href='profile.html') player name
                             td 5
@@ -69,7 +69,7 @@ html
                             td 1
                             td.player-info
                                 a(href='profile.html').avatar-prof.mr-2.rounded-circle
-                                    img(src='https://placehold.it/35x35' alt='').img-fluid.rounded-circle.d-inline-block
+                                    img(src='https://placehold.it/35x35' alt='image alt').img-fluid.rounded-circle.d-inline-block
                                 h6.name.m-0.d-inline-block.text-capitalize
                                     a(href='profile.html') player name
                             td 5
@@ -81,7 +81,7 @@ html
                             td 1
                             td.player-info
                                 a(href='profile.html').avatar-prof.mr-2.rounded-circle
-                                    img(src='https://placehold.it/35x35' alt='').img-fluid.rounded-circle.d-inline-block
+                                    img(src='https://placehold.it/35x35' alt='image alt').img-fluid.rounded-circle.d-inline-block
                                 h6.name.m-0.d-inline-block.text-capitalize
                                     a(href='profile.html') player name
                             td 5
@@ -93,7 +93,7 @@ html
                             td 1
                             td.player-info
                                 a(href='profile.html').avatar-prof.mr-2.rounded-circle
-                                    img(src='https://placehold.it/35x35' alt='').img-fluid.rounded-circle.d-inline-block
+                                    img(src='https://placehold.it/35x35' alt='image alt').img-fluid.rounded-circle.d-inline-block
                                 h6.name.m-0.d-inline-block.text-capitalize
                                     a(href='profile.html') player name
                             td 5
@@ -105,7 +105,7 @@ html
                             td 1
                             td.player-info
                                 a(href='profile.html').avatar-prof.mr-2.rounded-circle
-                                    img(src='https://placehold.it/35x35' alt='').img-fluid.rounded-circle.d-inline-block
+                                    img(src='https://placehold.it/35x35' alt='image alt').img-fluid.rounded-circle.d-inline-block
                                 h6.name.m-0.d-inline-block.text-capitalize
                                     a(href='profile.html') player name
                             td 5
