--- a/src/pug/profile.pug
+++ b/src/pug/profile.pug
@@ -68,7 +68,7 @@ html
                                     span 185 cm
                     .col-lg-4.col-md-6.mt-5
                         .chart
-                            img(src='https://placehold.it/400x400' class='img-fluid h-100')
+                            img(src='https://placehold.it/400x400' class='img-fluid h-100' alt='image alt')
 
         .match-history
             .container.p-5
