--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -23,6 +23,10 @@ header.header
                             i.far.fa-user
                             | my profile
                     li.item
+                        a.link.text-uppercase(href='news.html' class= pageTitle == 'Bandeja - News' ? 'active' : '' )
+                            i.far.fa-user
+                            | news
+                    li.item
                         a.link.text-uppercase(href='login.html' class= pageTitle == 'Bandeja - Login' ? 'active' : '' )
                             i.fas.fa-sign-in-alt
                             | login
