--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -16,5 +16,6 @@
 @import "pages/login";
 @import "pages/leaderboard";
 @import "pages/profile";
+@import "pages/news";
 @import "pages/challenges";
 @import "components/footer";
