--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,6 +5,7 @@
 @import "vendors/animate";
 @import "vendors/aos";
 @import "vendors/datedropper";
+@import "vendors/magnific-popup";
 
 // partials files
 
