--- a/src/sass/pages/_news.scss
+++ b/src/sass/pages/_news.scss
@@ -1,5 +1,32 @@
+
+.mfp-close-btn-in .mfp-close {
+    top: 1rem;
+    right: 1rem;
+    width: 30px;
+    height: 30px;
+    background: #fff;
+    color: #333;
+    border-radius: 50%;
+    line-height: normal;
+}
 section.news-feed {
     margin-top: 4rem;
+    &.ajax-popup {
+        margin: 0;
+        .media {
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            img {
+                max-width: 100%;
+                max-height: 100vh;
+                object-fit: cover;
+            }
+        }
+        .post {
+            border-radius: 0;
+        }
+    }
     .post {
         background: #fff;
         border-radius: 10px;
@@ -52,7 +79,13 @@ section.news-feed {
                 font-weight: 300;
             }
             &--media {
-                img {
+                display: block;
+                position: relative;
+                width: 100%;
+                height: 300px;
+                overflow: hidden;
+                img,
+                iframe {
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
@@ -61,8 +94,8 @@ section.news-feed {
         }
         &__highlights {
             margin: 1rem 0;
-            padding: .5rem 0;
-            border: 1px solid rgba($color: #000000, $alpha: .2);
+            padding: 0.5rem 0;
+            border: 1px solid rgba($color: #000000, $alpha: 0.2);
             border-left: 0;
             border-right: 0;
             span.icon {
@@ -126,11 +159,17 @@ section.news-feed {
                 }
                 &.like.clicked span.icon {
                     color: $mainColor;
-                    animation: grow .3s linear;
+                    animation: grow 0.3s linear;
                     @keyframes grow {
-                        0%{transform: scale(1);}
-                        50%{transform: scale(1.2) rotate(-20deg);}
-                        100%{transform: scale(1);}
+                        0% {
+                            transform: scale(1);
+                        }
+                        50% {
+                            transform: scale(1.2) rotate(-20deg);
+                        }
+                        100% {
+                            transform: scale(1);
+                        }
                     }
                 }
             }
@@ -141,6 +180,7 @@ section.news-feed {
                 margin-top: 1.5rem;
             }
             &--avatar {
+                flex-shrink: 0;
                 width: 40px;
                 height: 40px;
                 border-radius: 50%;
@@ -154,8 +194,8 @@ section.news-feed {
                 }
             }
             &--details {
-                background: #F0F2F5;
-                padding: .5rem .8rem;
+                background: #f0f2f5;
+                padding: 0.5rem 0.8rem;
                 border-radius: 20px;
                 h6 {
                     font-family: "Poppins", sans-serif;
