--- a/src/pug/news.pug
+++ b/src/pug/news.pug
@@ -29,7 +29,7 @@ html
                                     p Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium autem accusamus sequi exercitationem soluta beatae quaerat eligendi, doloribus, explicabo sunt harum voluptatem. Cum, perferendis quidem!
                                 a(href="ajax-post.html").post__content--media
                                     img(src="img/homeSlider/slide01.jpg", alt="")
-                            .post__highlights.parent
+                            .post__highlights
                                 .row
                                     .col-3
                                         div
@@ -39,7 +39,7 @@ html
                                         div
                                             button.open-comments-box.text-capitalize(data-toggle="collapse" href="#post-comment-1")
                                                 span 55 Comments
-                            .post__actions.parent
+                            .post__actions
                                 button.like
                                     span.icon.material-icons thumb_up
                                     | Like
@@ -71,6 +71,67 @@ html
                                         .post__comments--details
                                             h6.text-capitalize.m-0 john doe
                                             p consectetur adipisicing elit.
+                                            
+                    .col-md-6
+                        .post
+                            .author
+                                .author__img
+                                    a(href="profile.html")
+                                        img(src="img/homeSlider/slide02.jpg", alt="")
+                                .author__info
+                                    .name
+                                        h5.text-capitalize
+                                            a(href="profile.html") john doe
+                                    .date
+                                        span 8/09/2020
+                            .post__content
+                                .post__content--text
+                                    p Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium autem accusamus sequi exercitationem soluta beatae quaerat eligendi, doloribus, explicabo sunt harum voluptatem. Cum, perferendis quidem!
+                                a(href="ajax-post.html").post__content--media
+                                    img(src="img/homeSlider/slide03.jpg", alt="")
+                            .post__highlights
+                                .row
+                                    .col-3
+                                        div
+                                            span.icon.material-icons thumb_up
+                                            span 15
+                                    .col-9.text-right
+                                        div
+                                            button.open-comments-box.text-capitalize(data-toggle="collapse" href="#post-comment-1")
+                                                span 55 Comments
+                            .post__actions
+                                button.like
+                                    span.icon.material-icons thumb_up
+                                    | Like
+                                button.comment.open-comments-box(data-toggle="collapse" href="#post-comment-1")
+                                    span.icon.material-icons-outlined mode_comment
+                                    | Comment
+                                button.share
+                                    span.icon.material-icons-outlined share
+                                    | Share
+                            .post__comments.collapse#post-comment-1
+                                ul.post__comments--list
+                                    li
+                                        a(href="profile.html").post__comments--avatar
+                                            img(src="img/player.jpg", alt="")
+                                        
+                                        .post__comments--details.post__comments--input
+                                            input.write-comment(type="text", placeholder="Write a comment...")
+                                    li
+                                        a(href="profile.html").post__comments--avatar
+                                            img(src="img/player.jpg", alt="")
+                                        
+                                        .post__comments--details
+                                            h6.text-capitalize.m-0 john doe
+                                            p Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    li
+                                        a(href="profile.html").post__comments--avatar
+                                            img(src="img/player.jpg", alt="")
+                                        
+                                        .post__comments--details
+                                            h6.text-capitalize.m-0 john doe
+                                            p consectetur adipisicing elit.
+
                     .col-md-6
                         .post
                             .author
@@ -87,8 +148,8 @@ html
                                 .post__content--text
                                     p Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium autem accusamus sequi exercitationem soluta beatae quaerat eligendi, doloribus, explicabo sunt harum voluptatem. Cum, perferendis quidem!
                                 a(href="ajax-post.html").post__content--media
-                                    iframe(width="560", height="315", src="https://www.youtube.com/embed/xmUEpSrcEao", frameborder="0", allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture", allowfullscreen)
-                            .post__highlights.parent
+                                    iframe(src="https://www.youtube.com/embed/xmUEpSrcEao", frameborder="0", allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture", allowfullscreen)
+                            .post__highlights
                                 .row
                                     .col-3
                                         div
@@ -96,19 +157,19 @@ html
                                             span 15
                                     .col-9.text-right
                                         div
-                                            button.open-comments-box.text-capitalize(data-toggle="collapse" href="#post-comment-1")
+                                            button.open-comments-box.text-capitalize(data-toggle="collapse" href="#post-comment-2")
                                                 span 55 Comments
-                            .post__actions.parent
+                            .post__actions
                                 button.like
                                     span.icon.material-icons thumb_up
                                     | Like
-                                button.comment.open-comments-box(data-toggle="collapse" href="#post-comment-1")
+                                button.comment.open-comments-box(data-toggle="collapse" href="#post-comment-2")
                                     span.icon.material-icons-outlined mode_comment
                                     | Comment
                                 button.share
                                     span.icon.material-icons-outlined share
                                     | Share
-                            .post__comments.collapse#post-comment-1
+                            .post__comments.collapse#post-comment-2
                                 ul.post__comments--list
                                     li
                                         a(href="profile.html").post__comments--avatar
@@ -148,6 +209,10 @@ html
             $(document).ready(function() {
                 $('.post__content--media').magnificPopup({
                     type: 'ajax',
+                    closeOnBgClick: true,
+                      gallery:{
+                        enabled: true,
+                    },
                 });
             });
         
