--- a/src/pug/ajax-post.pug
+++ b/src/pug/ajax-post.pug
@@ -4,7 +4,7 @@ section.news-feed.ajax-popup
         .row.py-5.m-0
             .col-lg-8.p-0
                 .media.h-100
-                    img(src="img/homeSlider/slide01.jpg", alt="")
+                    iframe(src="https://www.youtube.com/embed/xmUEpSrcEao", frameborder="0", allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture", allowfullscreen)
             .col-lg-4.p-0
                 .post.h-100
                     .author
