--- a/src/sass/pages/_news.scss
+++ b/src/sass/pages/_news.scss
@@ -17,8 +17,9 @@ section.news-feed {
             width: 100%;
             height: 100%;
             overflow: hidden;
-            img {
-                max-width: 100%;
+            img, iframe {
+                width: 100%;
+                min-height: 60vh;
                 max-height: 100vh;
                 object-fit: cover;
             }
