--- a/src/pug/news.pug
+++ b/src/pug/news.pug
@@ -9,7 +9,8 @@ html
         
         section.news-feed
             .container.pt-5
-
+                .create-post
+                    
                 .row.mt-5
                     .col-md-6
                         .post
